_sass/navigation.scss
.TreeMenu-items {
  @include fontSize(small);
  @include paddingLeft(normal);
  @include rowGap(normal);
}

.TreeMenu-item {
  position: relative;
}

.TreeMenu-item.has-children {
  &::before {
    content: '\f0da';
    font-family: 'Font Awesome 6 Pro';
    font-weight: 900;
    position: absolute;
    right: calc(100% + var(--whiteSpace--tight));
    top: 0;
    transform: rotate(0deg);
    transition-property: transform;
    transition-duration: 0.25s;
  }

  & > .TreeMenu-items {
    max-height: 0;
    opacity: 0;
    overflow: hidden;
    transition-duration: 0.5s;
    transition-property: margin, max-height, opacity;
    @include rowGap(tight);
  }

  &.is-active {
    &::before {
      color: var(--color--primary);
      transform: rotate(90deg);
    }

    & > .TreeMenu-items {
      opacity: 1;
      max-height: 500px;
      @include marginTop(tight);
    }
  }
}

.TreeMenu-item.is-active {
  & > .TreeMenu-button {
    font-weight: bold;
  }
}

.TableOfContents-items {
  color: var(--color--text--faded);
  @include fontSize(small);
}

.TableOfContents-title {
  @extend .text--heading--3;

  margin-top: 0;
  @include marginBottom(tight);
}

.TableOfContents-items,
.TableOfContents-subItems {
  @include rowGap(tight);
}

.TableOfContents-subItems {
  border-left: 1px dotted transparent;

  @include marginLeft(tight);
  @include marginTop(tight);
}

.TableOfContents-button {
  &:hover,
  &.is-active {
    font-weight: bold;
  }
}

